// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useGlobals attaches an array of styles to the head 1`] = `
<head>
  <style
    data-trousers-global="3964264859 935387663"
    type="text/css"
  >
    *{box-sizing:border-box;}

    *{background-color:blue;}

  </style>
</head>
`;

exports[`useGlobals attaches an array of themed styles to the head 1`] = `
<head>
  <style
    data-trousers-global="3964264859 839332687"
    type="text/css"
  >
    *{box-sizing:border-box;}

    *{background-color:red;}

  </style>
</head>
`;

exports[`useGlobals attaches new styles when a new style collector is supplied 1`] = `
<head>
  <style
    data-trousers-global="3964264859"
    type="text/css"
  >
    *{box-sizing:border-box;}

  </style>
</head>
`;

exports[`useGlobals attaches new styles when a new style collector is supplied 2`] = `
<head>
  <style
    data-trousers-global="935387663"
    type="text/css"
  >
    *{background-color:blue;}

  </style>
</head>
`;

exports[`useGlobals attaches styles before data-trousers 1`] = `
<head>
  <style
    data-trousers-global="3964264859"
    type="text/css"
  >
    *{box-sizing:border-box;}

  </style>
  <style
    data-trousers=".hello__1855694664"
    type="text/css"
  >
    .hello__1855694664{color:blue;}

  </style>
</head>
`;

exports[`useGlobals attaches styles to the head 1`] = `
<head>
  <style
    data-trousers-global="3964264859"
    type="text/css"
  >
    *{box-sizing:border-box;}

  </style>
</head>
`;

exports[`useGlobals attaches themed styles to the head 1`] = `
<head>
  <style
    data-trousers-global="839332687"
    type="text/css"
  >
    *{background-color:red;}

  </style>
</head>
`;

exports[`useGlobals styles are not duplicated on rerender 1`] = `
<head>
  <style
    data-trousers-global="3964264859"
    type="text/css"
  >
    *{box-sizing:border-box;}

  </style>
</head>
`;
